# icp_tricp

./: CMakeLists.txt  LionScan1_rotated_10.xyz  LionScan1_rotated_20.xyz  README.md  fountain_a.ply  fountain_a.xyz  fountain_a_rotated_10.xyz  fountain_a_rotated_20.xyz  fountain_b.ply  fountain_b.xyz  fountain_data.txt  icp_registered_LionScan1_rotated_10.xyz  icp_registered_LionScan1_rotated_20.xyz  icp_registered_fountain_a_rotated_10.xyz  icp_registered_fountain_a_rotated_20.xyz  lionscan_data.txt  sphere1.xyz  sphere2.xyz  test.xyz  test_rotated.xyz  test_trimmed.xyz  test_trimmed_LionScan.xyz  test_trimmed_fountain.xyz  tricp_registered_LionScan1_rotated_10.xyz  tricp_registered_fountain_a_rotated_10.xyz
data/: fountain_data_10.txt  fountain_data_20.txt  lionscan_data_10.txt  lionscan_data_20.txt
src/: MatrixReaderWriter.cpp  MatrixReaderWriter.h  main.cpp
